org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/CallOperation/CallOperation_paramTypes_07/003_CallOperation_paramTypes_07.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard
using kermeta::io::StdIO => stdio

using org::kermeta::language::structure


package test {
    class Main
    {
        operation main() : Void is do
        	/*var b : B[String] init B[String].new
        	b.foo(1)*/
        end
    }
	
 	class A {}
 	
    class C[X:A] {
    	
    	operation foo(x : X) : Void is do
		end
		
		
		operation bar() : Void is do
			

			var x1 : X
			var x2 : A init A.new
			
			foo(x1)
			foo(x2)
		end
	
	
    }
	
	
	
}



